--- a/ProjectShowcase/contact.html
+++ b/ProjectShowcase/contact.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
     <nav class="navbar">
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
             <li><a href="projects.html">Projects</a></li>
             <li><a href="skills.html">Skills</a></li>
             <li><a href="contact.html">Contact</a></li>
@@ -31,5 +31,11 @@
             <button type="submit">Send</button>
         </form>
     </section>
+    <footer>
+        <a href="https://github.com/Cheezymrp" target="_blank">
+            <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub Logo" style="width: 30px; height: 30px;">
+        </a>
+        <p>&copy; 2025 Michael Pedigo. All rights reserved.</p>
+    </footer>
 </body>
 </html>
