--- a/ProjectShowcase/index.html
+++ b/ProjectShowcase/index.html
@@ -6,12 +6,12 @@
     <title>Michael Pedigo | Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
     <nav class="navbar">
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
             <li><a href="projects.html">Projects</a></li>
             <li><a href="skills.html">Skills</a></li>
             <li><a href="contact.html">Contact</a></li>
@@ -29,6 +29,9 @@
         <p>I specialize in creating dynamic, user-friendly websites that tell compelling stories and showcase brands effectively. My passion lies in blending design and development to craft memorable digital experiences.</p>
     </section>
     <footer>
+        <a href="https://github.com/Cheezymrp" target="_blank">
+            <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub Logo" style="width: 30px; height: 30px;">
+        </a>
         <p>&copy; 2025 Michael Pedigo. All rights reserved.</p>
     </footer>
     <script src="script.js"></script>
