--- a/ProjectShowcase/projects.html
+++ b/ProjectShowcase/projects.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
     <nav class="navbar">
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
             <li><a href="projects.html">Projects</a></li>
             <li><a href="skills.html">Skills</a></li>
             <li><a href="contact.html">Contact</a></li>
@@ -27,7 +27,21 @@
                 <h3>Project 2</h3>
                 <p>A brief description of the project with an interactive preview.</p>
             </div>
+            <div class="project-item">
+                <h3>Project 3</h3>
+                <p>A brief description of the project with an interactive preview.</p>
+            </div>
+            <div class="project-item">
+                <h3>Project 4</h3>
+                <p>A brief description of the project with an interactive preview.</p>
+            </div>
         </div>
     </section>
+    <footer>
+        <a href="https://github.com/Cheezymrp" target="_blank">
+            <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub Logo" style="width: 30px; height: 30px;">
+        </a>
+        <p>&copy; 2025 Michael Pedigo. All rights reserved.</p>
+    </footer>
 </body>
 </html>
