--- a/ProjectShowcase/projects.html
+++ b/ProjectShowcase/projects.html
@@ -17,15 +17,19 @@
         </ul>
     </nav>
     <section class="projects">
-        <h2>Projects</h2>
+        <h2>Portfolio</h2>
         <div class="project-list">
             <div class="project-item">
-                <h3>Project 1</h3>
-                <p>A brief description of the project with an interactive preview.</p>
+                <h3>Cheezy Tech Solutions</h3>
+                <img src="assets/Basic.webp" alt="Cheezy Tech Solutions Logo" style="width: 150px; height: auto;">
+                <p>Explore the innovative solutions and projects by Cheezy Tech Solutions.</p>
+                <a href="https://cheezytechsolutions.com/" target="_blank" class="btn">Visit Website</a>
             </div>
             <div class="project-item">
-                <h3>Project 2</h3>
-                <p>A brief description of the project with an interactive preview.</p>
+                <h3>Via Slavis Nails</h3>
+                <img src="assets/viaslavishnails-logo.webp" alt="Via Slavis Nails Logo" style="width: 150px; height: auto;">
+                <p>Discover the elegance and creativity of Via Slavis Nails.</p>
+                <a href="https://viaslavishnails.com/" target="_blank" class="btn">Visit Website</a>
             </div>
             <div class="project-item">
                 <h3>Project 3</h3>
