--- a/ProjectShowcase/projects.html
+++ b/ProjectShowcase/projects.html
@@ -21,14 +21,14 @@
         <div class="project-list">
             <div class="project-item">
                 <h3>Cheezy Tech Solutions</h3>
-                <img src="assets/Basic.webp" alt="Cheezy Tech Solutions Logo" style="width: 150px; height: auto;">
+                <img src="assets/Basic.webp" alt="CheezyTech Solutions Logo" style="width: 150px; height: auto;">
                 <p>Explore the innovative solutions and projects by Cheezy Tech Solutions.</p>
                 <a href="https://cheezytechsolutions.com/" target="_blank" class="btn">Visit Website</a>
             </div>
             <div class="project-item">
-                <h3>Via Slavis Nails</h3>
-                <img src="assets/viaslavishnails-logo.webp" alt="Via Slavis Nails Logo" style="width: 150px; height: auto;">
-                <p>Discover the elegance and creativity of Via Slavis Nails.</p>
+                <h3>Via's lavish Nails</h3>
+                <img src="assets/Via's logo (1).jpg" alt="Via's lavish Nails Logo" style="width: 200px; height: auto;">
+                <p>Discover the elegance and creativity of Via's lavish Nails.</p>
                 <a href="https://viaslavishnails.com/" target="_blank" class="btn">Visit Website</a>
             </div>
             <div class="project-item">
