--- a/ProjectShowcase/skills.html
+++ b/ProjectShowcase/skills.html
@@ -6,16 +6,19 @@
     <title>Skills & Proficiency</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <nav class="navbar">
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="projects.html">Projects</a></li>
-            <li><a href="skills.html">Skills</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-    </nav>
+    <!-- Navigation Bar: Contains links to different sections of the portfolio -->
+    <div class="topnav" id="myTopnav">
+            <a class="active" href="skills.html">Skills</a>
+            <a href="index.html">Home</a>
+            <a href="projects.html">Projects</a>
+            <a href="contact.html">Contact</a>
+            <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <i class="fa fa-bars"></i>
+            </a>
+    </div>
     <section class="skills">
         <h2>Skills</h2>
         <div class="skills-matrix">
@@ -69,4 +72,15 @@
         <p>&copy; 2025 Michael Pedigo. All rights reserved.</p>
     </footer>
 </body>
+<script>
+/* Toggle between adding and removing the "responsive" class to topnav when the user clicks on the icon */
+function myFunction() {
+  var x = document.getElementById("myTopnav");
+  if (x.className === "topnav") {
+    x.className += " responsive";
+  } else {
+    x.className = "topnav";
+  }
+}
+</script>
 </html>
