--- a/ProjectShowcase/contact.html
+++ b/ProjectShowcase/contact.html
@@ -6,16 +6,19 @@
     <title>Contact</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <nav class="navbar">
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="projects.html">Projects</a></li>
-            <li><a href="skills.html">Skills</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-    </nav>
+    <!-- Navigation Bar: Contains links to different sections of the portfolio -->
+    <div class="topnav" id="myTopnav">
+            <a class="active" href="contact.html">Contact</a>
+            <a href="index.html">Home</a>
+            <a href="projects.html">Projects</a>
+            <a href="skills.html">Skills</a>
+            <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <i class="fa fa-bars"></i>
+            </a>
+    </div>
     <section class="contact">
         <h2>Contact Me</h2>
         <form id="contact-form">
@@ -37,5 +40,17 @@
         </a>
         <p>&copy; 2025 Michael Pedigo. All rights reserved.</p>
     </footer>
+
+<script>
+// Ensure myFunction is globally accessible
+function myFunction() {
+    var x = document.getElementById("myTopnav");
+    if (x.className === "topnav") {
+        x.className += " responsive";
+    } else {
+        x.className = "topnav";
+    }
+}
+</script>
 </body>
 </html>
